--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     depends_on:
       - db
     restart: unless-stopped
+    volumes:
+      - ./data/uploads:/app/uploads  
 
   db:
     image: postgres:15
